syntax = "proto3";

package hello;

option go_package = ".;main";
option java_package = "io.amsokol.grpc.benchmarking";
option java_multiple_files = true;
option csharp_namespace = "GrpcGreeter";

message HelloRequest {
  // Request message contains the name to be greeted
  string name = 1;
}

message HelloReply {
  // Reply contains the greeting message
  string message = 1;
}

service Greeter {
  // Our SayHello rpc accepts HelloRequests and returns HelloReplies
  rpc SayHello(HelloRequest) returns (HelloReply);
}
